# ani-sync

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  3_question.yaml
.github/workflows/: ci.yml  release.yml
src/: anilist.rs  auth.rs  cli.rs  client.rs  kitsu.rs  lib.rs  main.rs  mal.rs  mangabaka.rs  models.rs  storage.rs  sync.rs  ui.rs
